--- a/app/templates/base/admin.html
+++ b/app/templates/base/admin.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Title</title>
     <!-- import CSS -->
     <link rel="stylesheet" href="{{ url_for('static',filename='element/index@2.13.2.css') }}">
     <!-- import Vue before Element -->
@@ -10,10 +11,6 @@
     <script src="{{ url_for("static",filename='element/index@2.13.2.js') }}"></script>
 </head>
 <body>
-
-<!-- import JavaScript -->
-
-
 <div id="app">
     <template>
         <el-container style="height: 100%;">
@@ -36,11 +33,13 @@
                 <el-scrollbar style="height: 100%;border-right: 2.5px solid #f0f0f0;">
                     <el-aside width="200px">
                         <el-menu
-                                default-active="2"
+                                :default-active="activeIndex2"
+                                ref="leftMenu"
                                 class="el-menu-vertical-demo"
+                                :unique-opened="true"
+                                :collapse-transition="true"
                                 @open="handleOpen"
                                 @close="handleClose"
-
                                 text-color="black"
                                 active-text-color="#ffd04b">
                             <el-submenu index="1">
@@ -49,10 +48,12 @@
                                     <span>博客</span>
                                 </template>
                                 <el-menu-item-group>
-                                    <a href="{{ url_for('admin.manager') }}">
+                                    <a href="#">
                                         <el-menu-item index="1-1">发表博文</el-menu-item>
                                     </a>
-                                    <el-menu-item index="1-2">管理博文</el-menu-item>
+                                    <a href="{{ url_for('admin.manager') }}">
+                                        <el-menu-item index="1-2">管理博文</el-menu-item>
+                                    </a>
                                     <el-menu-item index="1-3">博文分类</el-menu-item>
                                     <el-menu-item index="1-4">博文抓取</el-menu-item>
                                 </el-menu-item-group>
@@ -79,7 +80,14 @@
                                     <span>Chrome插件</span>
                                 </template>
                                 <el-menu-item-group>
-                                    <el-menu-item index="3-1">插件管理</el-menu-item>
+                                    <a href="{{ url_for('admin.manage_plugins') }}">
+                                        <el-menu-item index="3-1">插件管理</el-menu-item>
+                                    </a>
+                                </el-menu-item-group>
+                                <el-menu-item-group>
+                                    <a href="{{ url_for('admin.manage_plugins') }}">
+                                        <el-menu-item index="3-2">插件爬取</el-menu-item>
+                                    </a>
                                 </el-menu-item-group>
                             </el-submenu>
                             <el-submenu index="4">
@@ -96,119 +104,84 @@
                     </el-aside>
                 </el-scrollbar>
                 <el-main>
-                    {% block main %}
-
-                    {% endblock %}
+                    <main-content></main-content>
                 </el-main>
             </el-container>
         </el-container>
     </template>
 </div>
-</body>
+{% include component ignore missing %}
 <script>
-    const data = {
-        activeIndex2: "1",
-        activeIndex1: "1"
-    }
-    Object.assign(data, {% block data %}{% endblock %})
-
-    const axiosInstance = axios.create()
+    axios.defaults.headers.post['Content-Type'] = 'application/x-www-form-urlencoded'
+    axios.defaults.headers.get['Content-Type'] = 'application/json'
+    const axiosInstance = axios.create({
+        paramsSerializer: function (params) {
+            let tmp = Object.keys(params).map(function (key) {
+                return encodeURIComponent(key) + "=" + encodeURIComponent(params[key]);
+            }).join("&")
+            return tmp
+        }
+    })
     Vue.prototype.$http = axiosInstance
     axiosInstance.interceptors.request.use(function (config) {
-        console.log(config)
         config.headers.common['X-CSRFToken'] = "{{ csrf_token() }}"
         return config
     })
 
-
     new Vue({
-        el: '#app',
-        data: function () {
-            return data
+        el: "#app",
+        data() {
+            return {
+                activeIndex2: "1",
+                activeIndex1: "1"
+            }
         },
-        components: {
-            {% block components %}{% endblock %}
+        watch: {
+            activeIndex1(val, oldVal) {
+                window.localStorage.setItem("activeIndex1", val)
+            },
+            activeIndex2(val, oldVal) {
+                window.localStorage.setItem("activeIndex2", val)
+            }
         },
-        filters: {
-            {% block filters %}{% endblock %}
+        mounted() {
+            this.activeIndex2 = window.localStorage.getItem("activeIndex2")
+            this.$refs.leftMenu.open(this.activeIndex2)
         },
         methods: {
             handleOpen(key, keyPath) {
-                console.log(key, keyPath);
+                window.localStorage.setItem("activeIndex2", key)
             },
             handleClose(key, keyPath) {
-                console.log(key, keyPath);
+                window.localStorage.removeItem("activeIndex1")
             },
             handleSelect(key, keyPath) {
                 console.log(key, keyPath);
-            },
-            {% block methods %}
-
-            {% endblock %}
-        },
-        computed: {
-            {% block computed %}
-
-            {% endblock %}
-        },
-        beforeCreate() {
-            {% block beforeCreate %}
-            {% endblock %}
-        },
-        created() {
-            {% block created %}
-
-            {% endblock %}
-        },
-        beforeMount() {
-            {% block beforeMount %}{% endblock %}
-        },
-        mounted() {
-            {% block mounted %}
-
-            {% endblock %}
-        },
-        beforeUpdate() {
-            {% block beforeUpdate %}{% endblock %}
-        },
-        updated() {
-            {% block updated %}{% endblock %}
-        },
-        activated() {
-            {% block activated %}{% endblock %}
-        },
-        deactivated() {
-            {% block deactivated %}{% endblock %}
-        },
-        beforeDestroy() {
-            {% block beforeDestroy %}{% endblock %}
-        },
-        destroyed() {
-            {% block destroyed %}{% endblock %}
-        },
-        errorCaptured() {
-            {% block errorCaptured %}{% endblock %}
+            }
         }
-
-
     })
 </script>
-<style scoped="scoped">
+<style>
     body {
         margin: 0px;
         font-size: 16px;
+    }
+
+    a {
+        text-decoration: none;
     }
 
     #app {
         height: calc(100vh);
     }
 
-    #app /deep/ .el-header {
+    #app .el-header {
         padding: 0px;
     }
 
-    #app /deep/ .el-scrollbar__wrap {
+    #app .el-scrollbar__wrap {
         overflow-x: hidden;
     }
 </style>
+</body>
 </html>
