--- a/app/templates/base/admin.html
+++ b/app/templates/base/admin.html
@@ -60,13 +60,13 @@
                                         <el-menu-item index="1-3">博文分类</el-menu-item>
                                         <el-menu-item index="1-4">博文抓取</el-menu-item>
                                     </el-menu-item-group>
-                                    {#<el-menu-item-group>
-                                <el-menu-item index="1-4">博文抓取</el-menu-item>
-                            </el-menu-item-group>#}
-                                    {#<el-submenu index="1-5">
-                                <template slot="title">选项4</template>
-                                <el-menu-item index="1-5-1">选项1</el-menu-item>
-                            </el-submenu>#}
+                                    <el-menu-item-group>
+                                        <el-menu-item index="1-6">博文抓取</el-menu-item>
+                                    </el-menu-item-group>
+                                    <el-submenu index="1-5">
+                                        <template slot="title">选项4</template>
+                                        <el-menu-item index="1-5-1">选项1</el-menu-item>
+                                    </el-submenu>
                                 </el-submenu>
                                 <el-submenu index="2">
                                     <template slot="title">
