--- a/app/templates/base/foundation.html
+++ b/app/templates/base/foundation.html
@@ -5,7 +5,8 @@
     <title>Title</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill@7.10.4/dist/polyfill.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    {#    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>#}
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.19.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.13.2/lib/theme-chalk/index.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/element-ui@2.13.2/lib/index.js"></script>
