--- a/app/templates/base/foundation.html
+++ b/app/templates/base/foundation.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill@7.10.4/dist/polyfill.min.js"></script>
     {#    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>#}
@@ -52,7 +54,7 @@
 <style>
     body {
         margin: 0px;
-         font-size: 16px;
+        font-size: 16px;
     }
 
     h1, h2, h3, h4, h5, h6, span, p {
