--- a/app/templates/base/foundation.html
+++ b/app/templates/base/foundation.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--Baidu Analytics-->
+
     <script>
+        //baidu analytics
         var _hmt = _hmt || [];
         (function () {
             var hm = document.createElement("script");
@@ -12,8 +13,19 @@
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
+        //baidu linksubmit
+        (function () {
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https') {
+                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+            } else {
+                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp, s);
+        })();
     </script>
-
     <!-- vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
