--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -37,7 +37,8 @@
                     <el-main>
 
                         <el-row>
-                            <el-col :lg="{span:18,offset:3}">
+                            <el-col :lg="{span:18,offset:3}" :xl="{span:18,offset:3}" :md="{span:18,offset:3}"
+                                    :sm="{span:20,offset:2}"  :xs="{span:8,offset:2}">
                                 <div class="grid-content bg-purple-light">
                                     <div class="main-content_container">
                                         <main-content></main-content>
